# jungfrau_utils

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  Readme.md  make_release.py  pyproject.toml  setup.py
.github/workflows/: deployment.yaml
conda-recipe/: build.sh  meta.yaml  run_test.sh
docs/: conf.py  environment.yaml  index.rst  jungfrau_utils.rst  requirements.txt
jungfrau_utils/: Makefile  __init__.py  bsread_channel_utils.py  compression.py  convert_gainmaps.py  corrections.py  data_handler.py  escape_adapter.py  file_adapter.py  geometry.py  helpers.py  jf_file.py  stream_adapter.py  swissfel_helpers.py
jungfrau_utils/plot/: __init__.py  matplotlibrc  utilities.py
jungfrau_utils/scripts/: create_jungfrauclient_env.sh  download_from_audit.py  download_from_audit.sh  jungfrau_console.sh  jungfrau_console_alvra.sh  jungfrau_console_bernina.sh  jungfrau_convert_gainmaps.py  jungfrau_create_pedestals.py  jungfrau_env.sh  jungfrau_print_pixelmask.py  jungfrau_run.py  jungfrau_run_pedestals.py
jungfrau_utils/src/: corrections.c
jungfrau_utils/tests/: corrections_test.c  corrections_test.py  test_analysis.py  test_data_handler.py  test_file_adapter.py  test_handler.py  test_handler_JF02T09V01.py  test_handler_JF06.py  (+4 more)
scripts/: jungfrau_convert_gainmaps.py  jungfrau_run_pedestals.py
tests/: conftest.py  const_JF01T03V01.py  test_file_adapter.py  test_handler.py  test_handler_JF02T09V01.py  test_handler_JF02T09V02.py  test_handler_JF06.py  test_handler_stripsel.py  test_handler_stripsel_JF18.py  test_helpers.py  test_stream_adapter.py
